# fullinterest

./: Llama2_with_llamaindex.ipynb  README.md  basketballai.py  init.vim
AI-Arts/: fluxbasic.py
Depth-vision/: Depth-Vision.py
SnakeAI/: agent.py  game.py  model.py
SnakeAI/model/: model.pth
SpaceX-Launches-Website/: app.py
SpaceX-Launches-Website/static/css/: style.css
SpaceX-Launches-Website/templates/: card.html  index.html
ai-news-aggregator/: .env  README.md  pyproject.toml  test_youtube_service.py
ai-news-aggregator/app/: __init__.py
ai-news-aggregator/app/config/: settings.py
ai-news-aggregator/app/services/: youtube_service.py
autohotkeygit/: shortcut.ahk
browser/: README.md  check.py  main.py
browserpy/: app.py  main.py
faceswap/: Deepfake.ipynb
just/passwordgenerator/: main.py
just/prayertime/: main.py
just/weather/: allapi.py  app.py  main.py
just/weather/templates/: index.html
ocaml/: minicompilar.ml
passwordleakedchecker/: main.py
rusty/hello_rust/src/: main.rs
typingspeed/: main.py
youtubedownwebsite/: app.py
youtubedownwebsite/templates/: index.html
